Fixed extra space in title

--- a/Style.css
+++ b/Style.css
@@ -83,3 +83,6 @@ a:link, a:visited{
 a:hover, a:active{
     color: grey;
 }
+p:first-of-type{
+    text-align: center;
+}
